input.css
/* COLOR PALETTE
#1A1A1D – Dark Grayish Purple (for background and main sections)
#2D2A44 – Very Dark Purple (for header, footer, and navigation)
#F5A623 – Warm Gold (for buttons, highlights, and links)
#E3E3E3 – Light Gray (for text and borders)
#F1F1F1 – Off-white (for text and content details)
*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

}

body {
  font-family: Arial, Helvetica, sans-serif;
  line-height: 1.6;
  background-color: #1A1A1D;
  color: #E3E3E3;
}

/* Navbar */
header {
  background-color: #2D2A44;
  color: #F5A623;
  padding: 10px 0;
}

.header-container{
  display: flex;
  align-items: center;
  justify-content: space-between;
  max-width: 1200px;
  margin: 0 auto;
}

/* Hero section */
.hero{
  display:flex;
  align-items: center;
  justify-content: center;
  height:60vh;
  background-color: #F5A623;
  color: white;
  text-align:center;
}

.hero h1{
  font-size: 3rem;
  margin-bottom: 10px;
  color:#2D2A44;  
}

.hero p{
  font-size: 1.25rem;
  margin-bottom: 20px;
}

.typewriter-text {
  display: inline-block;
  font-size: 1.5rem;
  margin-top: 20px;
  white-space: nowrap;
  overflow: hidden;
  border-right: 3px solid #333;
  width: 0;
  animation: typing 6s steps(30) 1s forwards, blink 0.75s step-end infinite;
}

.hero-text {
  z-index: 1; /* Ensure text appears above the image */
  margin-bottom: 30px; /* Space between text and image */
}

.Profile{
  display: flex;
  align-items: center;
  justify-content: center;
  margin: -100px auto 40px auto;
  text-align: center;
}

.profile-img {
  border-radius: 50%;
  width: 400px;
  height: 400px;
  object-fit: cover;
  margin-top: 20px;
}

a:link, a:visited{
  color:#F5A623;
}

a:hover{
  transition: #f1f1f1 0.3s ease;
}


nav ul {
  list-style-type:none;
  text-align: center;

}

nav ul li{
  display: inline;
  margin-right:20px;
}

nav ul li a {
  text-decoration: none;
  color: #F5A623;
  font-weight: bold;
  transition: color 0.3s ease;
}

nav ul li a:hover {
  color: #F1F1F1;
}

/* Sections */
section{
  padding: 20px;
  margin: 20px;
  background-color: #2D2A44;
  border-radius: 8px;
  box-shadow: 0 2px 10px rgba (0,0,0,0.1);
}

h1,h2{
  color: #f5a623;
}

/* Skill list */
ul li{
  margin: 5px 0;
  color: #F1F1F1;
}

/* Project Section */
.project{
  margin-bottom: 20px;
}

button{
  background-color: #F5A623;
  color:#1A1A1D;
  border:none;
  padding: 10px 20px;
  cursor: pointer;
  border-radius: 5px;
  transition: background-color 0.3s ease;
}

button:hover{
  background-color: #F1F1F1;
  color:#1A1A1D;
}

footer{
  text-align: center;
  padding:10px;
  background-color: #2D2A44;
  color:#f5a623;

}

/* Media query for responsiveness */
@media (max-wdith: 786px)
{
  nav ul{
    text-align:left;
    padding-left: 20px;

  }

  nav ul li{
    display: block;
    margin-bottom: 10px;
  }

  section{
    margin:10px;
  }
}

@keyframes typing {
  from {width: 0;}
  to {width: 100%}
}

@keyframes blink {
  50% {border-color: transparent;}
}

